# helix_chatbot

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
chatbot/: docker-compose.yml
chatbot/data/chroma_db/: chroma.sqlite3
chatbot/frontend/: index.html
chatbot/gateway/: .dockerignore  Dockerfile  bench_cache.py  cache.py  main.py  pyproject.toml  templates.py  test_cache.py  test_templates.py  worker.py
chatbot/ingestion/: .dockerignore  Dockerfile  college_data.md  ingest.py  pyproject.toml
chatbot/nginx/: nginx.conf
docs/: GUIDE.md  INTERVIEW.md
